Implemented basic UI
