# interfaces/rest/api_routes.go
@@ -18,6 +18,10 @@ func addAPIRoutes(e *echo.Echo, h *handler.Handler) {
 	hooks.PUT("/:id", h.UpdateHook)
 	hooks.DELETE("/:id", h.DeleteHook)
 
+	workflows := api.Group("/workflows")
+	workflows.GET("", h.ListWorkflows)
+	workflows.GET("/:id", h.GetWorkflow)
+
 	workflow := api.Group("/workflow")
 	workflowExecutions := workflow.Group("/executions")
 	workflowExecutions.GET("", h.ListWorkflowExecutions)
